--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,7 +14,9 @@
 
 html,
 body {
-  min-height: 100%;
+  min-height: 100%; 
+  overflow-x: hidden;
+   
 }
 
 body {
